[workspace]
members = [".", "crates/npr_shaders"]

[package]
name = "bevy-npr-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["wayland", "bevy_dev_tools"] }
bevy_vrm1 = "0.6"
bevy_panorbit_camera = "0.34"
bevy_egui = "0.39"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
npr_shaders = { path = "crates/npr_shaders" }

[[bin]]
name = "npr_viewer"
path = "src/bin/npr_viewer.rs"

[lib]
path = "src/lib.rs"

[profile.dev.package."*"]
opt-level = 1
