[package]
name = "bevy-vrm"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["wayland", "bevy_dev_tools"] }
bevy_vrm1 = "0.6"
bevy_panorbit_camera = "0.34"
bevy_file_dialog = "0.9"
directories = "6.0"
vrm0_compat = { path = "crates/vrm0_compat" }
cinev_retarget = { path = "crates/cinev_retarget" }

# Enable optimizations for dependencies in dev builds (faster runtime, reasonable compile)
[profile.dev.package."*"]
opt-level = 1
